<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_backup"
        android:orderInCategory="100"
        android:title="@string/action_backup"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_import"
        android:orderInCategory="100"
        android:title="@string/action_import"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_backup_Drive"
        android:orderInCategory="100"
        android:title="@string/action_backup_drive"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_import_Drive"
        android:orderInCategory="100"
        android:title="@string/action_import_drive"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete_all"
        android:orderInCategory="100"
        android:title="@string/action_clear_data"
        app:showAsAction="never" />
</menu>